# MomoEngine

./: .gitignore  CMakeLists.txt
assets/: test.lua
demo/: helloworld.cpp
new ver/: CMakeLists.txt
new ver/demo/: helloworld.cpp
new ver/src/: Engine.h  GraphicsManager.cpp  GraphicsManager.h  ResourceManager.h
old ver/: CMakeLists.txt
old ver/build-dir/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  helloworld.vcxproj  helloworld.vcxproj.filters  momoengine.sln  momoengine.vcxproj  momoengine.vcxproj.filters  run_helloworld.vcxproj  run_helloworld.vcxproj.filters
old ver/build-dir/Debug/: momoengine.lib
old ver/build-dir/helloworld.dir/Debug/: .d.json  helloworld.cpp.module.json  helloworld.exe.recipe
old ver/build-dir/helloworld.dir/Debug/helloworld.tlog/: CL.command.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
old ver/build-dir/helloworld.dir/Debug/helloworld_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
old ver/build-dir/momoengine.dir/Debug/: .d.json  engine.cpp.module.json  graphicsmanager.cpp.module.json  inputmanager.cpp.module.json  momoengine.lib.recipe  resourcemanager.cpp.module.json
old ver/build-dir/momoengine.dir/Debug/momoengine.tlog/: CL.command.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
old ver/build-dir/momoengine.dir/Debug/momoengine_MD.tlog/: CL.command.1.tlog  Microsoft.Build.CPPTasks.CL.read.1.tlog  Microsoft.Build.CPPTasks.CL.write.1.tlog
old ver/build-dir/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
old ver/build-dir/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate
old ver/build-dir/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
old ver/demo/: helloworld.cpp
old ver/src/: Engine.cpp  GraphicsManager.cpp  ResourceManager.cpp  Sprite.h
src/: Engine.cpp  Engine.h  EntityManager.cpp  EntityManager.h  GraphicsManager.cpp  GraphicsManager.h  InputManager.cpp  InputManager.h  ScriptManager.cpp  ScriptManager.h  Sprite.h  Types.h
